--- a/app/src/main/res/drawable/ripple_round_corners_stroke_white_background.xml
+++ b/app/src/main/res/drawable/ripple_round_corners_stroke_white_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/teal_700">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/purple_700">
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
