--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/createAlarmFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/createAlarmFragment"
@@ -12,7 +12,7 @@
         tools:layout="@layout/fragment_create_alarm" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.joanderson.geocuco.HomeFragment"
+        android:name="com.joanderson.geocuco.view.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 </navigation>
