--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,6 +47,7 @@
                 app:layout_constraintTop_toBottomOf="@id/create_alarm_title" >
 
                 <android.widget.Button
+                    android:id="@+id/createNewGeoAlarm"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
